decision tree and some graphics

--- a/Alice Puzzles.ipynb
+++ b/Alice Puzzles.ipynb
@@ -30,15 +30,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Down the Rabbit Hole\n",
-    "Alice is falling down the rabbit hole, wondering which country she might be in. "
+    "## Down the Rabbit Hole\n",
+    "Alice is falling down the rabbit hole, wondering which country she might be in."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### The Pool of Tears\n",
+    "## The Pool of Tears\n",
     "\n",
     "Alice has discovered a room: There is a very small door, a very tall table, and very small key sitting upon that very tall table."
    ]
@@ -47,7 +47,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Advice from a Caterpillar\n",
+    "## Advice from a Caterpillar\n",
     "\n",
     "This caterpillar speaks in anagrams, palendromes, and other stringy messes."
    ]
@@ -64,25 +64,443 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### The Mad Tea Party\n",
+    "## The Mad Tea Party\n",
     "\n",
-    "Constraint satisfaction... where are you allowed to sit when you move around?\n",
+    "A Constraint Satisfaction Problem uses search to determine a solution that does not violate given constraints. A common example is the \"Map Color Problem\". You are tyring to color a map of the United States, and you have 4 available colors (no mixing!) : Red Green Yellow Blue. The constraint is that no adjacent states may be the same color. \n",
     "\n",
-    "Logic and riddles\n",
+    "But we are in Puzzleland! We don't deal with serious problems, only silly ones! It just so happens that Alice comes upon a tea party, where she joins the Mad Hatter, the Dormouse, and the March Hare stuck at tea time.\n",
     "\n",
-    "Time is angry with us\n",
+    "> *'Yes, that's it,' said the Hatter with a sigh: 'it's always tea-time, and we've no time to wash the things between whiles.'*\n",
     "\n",
-    "Happy Unbirthday"
+    ">*'Then you keep moving round, I suppose?' said Alice.*\n",
+    "\n",
+    ">*'Exactly so,' said the Hatter: 'as the things get used up.'*\n",
+    "\n",
+    ">*'But what happens when you come to the beginning again?' Alice ventured to ask.*\n",
+    "\n",
+    ">*'Suppose we change the subject,' the March Hare interrupted.*\n",
+    "\n",
+    "Let us define a Constraint Satisfaction Problem for how everyone can move around the tea table when it's time to change places!\n",
+    "\n",
+    "> **Variables: **\n",
+    "\n",
+    ">>Possible seats to be filled around the table. Let's say there is 8.\n",
+    "\n",
+    "> **Domain: **\n",
+    "\n",
+    ">>Each of the guests who can fill a seat around the table. Alice, the Mad Hatter, the March Hare, and the Dormouse.\n",
+    "\n",
+    "> **Constraints:** \n",
+    "\n",
+    ">>You cannot sit in a seat that someone else was just sitting in (including yourself).\n",
+    "\n",
+    "We are ready to start coding!\n",
+    "\n",
+    "\n",
+    "<!--<center><div><img src = \"changeplace.gif\" alt = \"\" width=400px  style=\"display:inline;\"> </div></center>-->\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 Alice\n",
+      "1 None\n",
+      "2 Dormouse\n",
+      "3 None\n",
+      "4 MadHatter\n",
+      "5 None\n",
+      "6 None\n",
+      "7 MarchHare\n",
+      "8 None\n",
+      "9 None\n",
+      "10 None\n",
+      "11 None\n",
+      "\n",
+      "\n",
+      "0 None\n",
+      "1 Alice\n",
+      "2 None\n",
+      "3 None\n",
+      "4 None\n",
+      "5 Dormouse\n",
+      "6 None\n",
+      "7 None\n",
+      "8 MarchHare\n",
+      "9 None\n",
+      "10 None\n",
+      "11 MadHatter\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "\n",
+    "#number of places at the tea table\n",
+    "n = 12\n",
+    "guests = [\"Alice\",\"MadHatter\",\"MarchHare\",\"Dormouse\"]\n",
+    "#initialize our places so no one is sitting there\n",
+    "\n",
+    "domain = dict.fromkeys(set(range(n)))\n",
+    "\n",
+    "#randomly assign seating\n",
+    "initialize= np.random.choice(n, len(guests),replace=False)\n",
+    "count=0\n",
+    "for i in initialize:\n",
+    "    domain[i]=guests[count]\n",
+    "    count+=1\n",
+    "for i in domain:\n",
+    "        print(i,domain[i])\n",
+    "\n",
+    "        \n",
+    "def apply_constraint(domain,guests):\n",
+    "    #search for the right seats\n",
+    "    #define list of possible seats (anywhere not currently occupied by anyone)\n",
+    "    possible = []\n",
+    "    for k in domain:\n",
+    "        if domain[k]== None:\n",
+    "            possible.append(k)\n",
+    "    if not len(possible)>=len(guests): \n",
+    "        print(\"This simply isn't possible! Though... I've often believed six impossible things before breakfast.\")\n",
+    "    \n",
+    "    else:\n",
+    "        #now you can assign the guests to any of these seats and it will be a solution\n",
+    "        assigns = [np.random.choice(possible,len(guests),replace=False),np.random.choice(guests,len(guests),replace=False)]\n",
+    "        domain = dict.fromkeys(set(range(len(domain))))\n",
+    "\n",
+    "        for val in zip(assigns[0],assigns[1]):\n",
+    "            domain[val[0]]=val[1]\n",
+    "        print(\"\\n\")   \n",
+    "        for i in domain:\n",
+    "            print(i,domain[i])\n",
+    "\n",
+    "def print_table(domain):\n",
+    "    dim = np.ceil(len(domain)/4)\n",
+    "    print(dim)\n",
+    "    \n",
+    "    \n",
+    "\n",
+    "apply_constraint(domain,guests)\n",
+    "\n",
+    "#we define a constraint where we return a boolean where we check\n",
+    "#if anyone is sitting in a seat that has been sat in before\n",
+    "\n",
+    "#def check_constraint(domain):\n",
+    "    #return True if constraint met\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "[[ 0.  0.  0.]\n",
+      " [ 0.  0.  0.]\n",
+      " [ 0.  0.  0.]\n",
+      " [ 0.  0.  0.]]\n",
+      "Point(350.0, 300.0)\n"
+     ]
+    }
+   ],
+   "source": [
+    "    \n",
+    "    \n",
+    "                          \n",
+    "    \n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "[[[ 0.  0.]\n",
+      "  [ 0.  0.]\n",
+      "  [ 0.  0.]]\n",
+      "\n",
+      " [[ 0.  0.]\n",
+      "  [ 0.  0.]\n",
+      "  [ 0.  0.]]\n",
+      "\n",
+      " [[ 0.  0.]\n",
+      "  [ 0.  0.]\n",
+      "  [ 0.  0.]]\n",
+      "\n",
+      " [[ 0.  0.]\n",
+      "  [ 0.  0.]\n",
+      "  [ 0.  0.]]]\n",
+      "Point(350.0, 300.0)\n",
+      "[[ 190.  190.]\n",
+      " [ 190.  290.]\n",
+      " [ 190.  390.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from graphics import *\n",
+    "\n",
+    "def main():\n",
+    "    \n",
+    "    #make a matrix with the number of guests to move around\n",
+    "    n=12\n",
+    "    screen_width=700\n",
+    "    screen_height=600\n",
+    "    midw=screen_width/2\n",
+    "    midh=screen_height/2\n",
+    "    dim = int(np.ceil(n/4))\n",
+    "    print(dim)\n",
+    "    table = np.zeros(shape=[4,dim,2])\n",
+    "    #0: top of table, 1:left 2: right 3: bottom \n",
+    "    print(table)\n",
+    "    table_width = 100*dim\n",
+    "    table_height = 100 * dim\n",
+    "    \n",
+    "        \n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    win = GraphWin('Tea Time', screen_width, screen_height)\n",
+    "    win.setCoords(0, screen_height, screen_width, 0)\n",
+    "    win.setBackground('pink')\n",
+    "    message = Text(Point(win.getWidth()/2, 30), 'Where is everyone sitting?')\n",
+    "    message.setTextColor('black')\n",
+    "    message.setStyle('italic')\n",
+    "    message.setSize(20)\n",
+    "    message.draw(win)\n",
+    "    #myImage = Image(Point(win.getWidth()/2,win.getHeight()/2), 'teatable.gif')\n",
+    "    #myImage.draw(win)\n",
+    "    \n",
+    "    #position the table in the center:\n",
+    "    \n",
+    "    center = Point(midw,midh)\n",
+    "    print(center)\n",
+    "    t = Rectangle(Point((midw-table_width/2),(midh-table_height/2)),Point((midw+table_width/2),(midh+table_height/2)))\n",
+    "    t.setFill(\"white\")\n",
+    "    #t.draw(win)\n",
+    "    \n",
+    "    x=40\n",
+    "    y=40\n",
+    "    \n",
+    "    #top and bottom\n",
+    "    for val in range(0,len(table[0])):\n",
+    "        table[0][val]=[(midw-table_width/2)+x,(midh-table_height/2)-10]\n",
+    "        table[3][val]=[(midw-table_width/2)-10,(midh-table_height/2)+y]\n",
+    "        table[1][val]=[(midw+table_width/2)+10,(midh-table_height/2)+y]\n",
+    "        table[2][val]=[(midw-table_width/2)+x,(midh+table_height/2)+10]\n",
+    "        \n",
+    "        x+=100\n",
+    "        y+=100\n",
+    "    print(table[3])\n",
+    "   \n",
+    "   \n",
+    "        \n",
+    "        \n",
+    "  \n",
+    "    \n",
+    "    i=0\n",
+    "\n",
+    "  \n",
+    "    \n",
+    "                \n",
+    "                \n",
+    "    \n",
+    "    \n",
+    "    rect = Rectangle(Point(150,150), Point(450,350))\n",
+    "    rect.draw(win)\n",
+    "    rect.setFill(\"white\")\n",
+    "    alice = Image(Point(200,100), 'alice.gif')\n",
+    "    alice.draw(win)\n",
+    "    hatter = Image(Point(400,100), 'madhatter.gif')\n",
+    "    hatter.draw(win)\n",
+    "    hare = Image(Point(200,400), 'march.gif')\n",
+    "    hare.draw(win)\n",
+    "    mouse = Image(Point(400,400), 'dormouse.gif')\n",
+    "    mouse.draw(win)\n",
+    "    \n",
+    "    win.getMouse()\n",
+    "    win.close()\n",
+    "    \n",
+    "  \n",
+    "\n",
+    "main()\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Who Stole the Tarts?\n",
+    "## We're All Mad Here\n",
+    "\n",
+    "Let's play with decision trees to decide whether or not Alice is likely to go mad. \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cat_listen 0.8042903712002691\n",
+      "\n",
+      "\n",
+      "plays_croquet 1.0\n",
+      "\n",
+      "\n",
+      "drinks_tea 0.6887218755408672\n",
+      "\n",
+      "\n",
+      "size 0.5408520829727552\n",
+      "\n",
+      "\n",
+      "how_late 0.4045627476894453\n",
+      "\n",
+      "\n",
+      "cat_listen 0.0\n",
+      "plays_croquet 0.0\n",
+      "drinks_tea 0.0\n",
+      "size 0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "import collections\n",
+    "import math\n",
+    "\n",
+    "def entropy(class_probabilities):\n",
+    "    return sum(-p * math.log(p,2) for p in class_probabilities if p)\n",
+    "\n",
+    "def class_probabilities(labels):\n",
+    "    total_count = len(labels)\n",
+    "    return [count / total_count for count in collections.Counter(labels).values()]\n",
+    "\n",
+    "def data_entropy(labeled_data):\n",
+    "    labels = [label for _, label in labeled_data]\n",
+    "    probabilities = class_probabilities(labels)\n",
+    "    return entropy(probabilities)\n",
+    "\n",
+    "def partition_entropy(subsets):\n",
+    "    total_count = sum(len(subset) for subset in subsets)\n",
+    "    \n",
+    "    return sum( data_entropy(subset) * len(subset) / total_count for subset in subsets)\n",
+    "\n",
+    "'''inputs = [\n",
+    "    \n",
+    "    ({'level':'Senior', 'lang':'Java', 'tweets':'no', 'phd':'no'}, False), #1\n",
+    "    ({'level':'Senior', 'lang':'Java', 'tweets':'no', 'phd':'yes'}, False),\n",
+    "    ({'level':'Mid', 'lang':'Python', 'tweets':'no', 'phd':'no'}, True),\n",
+    "    ({'level':'Junior', 'lang':'Python', 'tweets':'no', 'phd':'no'}, True),\n",
+    "    ({'level':'Junior', 'lang':'R', 'tweets':'yes', 'phd':'no'}, True), #5\n",
+    "    ({'level':'Junior', 'lang':'R', 'tweets':'yes', 'phd':'yes'}, False),\n",
+    "    ({'level':'Mid', 'lang':'R', 'tweets':'yes', 'phd':'yes'}, True),\n",
+    "    ({'level':'Senior', 'lang':'Python', 'tweets':'no', 'phd':'no'}, False),\n",
+    "    ({'level':'Senior', 'lang':'R', 'tweets':'yes', 'phd':'no'}, True),\n",
+    "    ({'level':'Junior', 'lang':'Python', 'tweets':'yes', 'phd':'no'}, True), #10\n",
+    "    ({'level':'Senior', 'lang':'Python', 'tweets':'yes', 'phd':'yes'}, True),\n",
+    "    ({'level':'Mid', 'lang':'Python', 'tweets':'no', 'phd':'yes'}, True),\n",
+    "    ({'level':'Mid', 'lang':'Java', 'tweets':'yes', 'phd':'no'}, True),\n",
+    "    ({'level':'Junior', 'lang':'Python', 'tweets':'no', 'phd':'yes'}, False) #14\n",
+    "    ]'''\n",
+    "inputs = [\n",
+    "    \n",
+    "    ({'cat_listen':'no', 'plays_croquet':'no', 'drinks_tea':'yes', 'size':'normal', 'how_late':'not'}, False), \n",
+    "    ({'cat_listen':'yes', 'plays_croquet':'yes', 'drinks_tea':'yes', 'size':'big','how_late':'very'}, True),\n",
+    "    ({'cat_listen':'yes', 'plays_croquet':'no', 'drinks_tea':'yes', 'size':'small','how_late':'somewhat'}, True),\n",
+    "    ({'cat_listen':'no', 'plays_croquet':'yes', 'drinks_tea':'yes', 'size':'normal','how_late':'very'}, False),\n",
+    "    ({'cat_listen':'no', 'plays_croquet':'yes', 'drinks_tea':'yes', 'size':'normal','how_late':'not'}, False),\n",
+    "    ({'cat_listen':'no', 'plays_croquet':'no', 'drinks_tea':'no', 'size':'normal','how_late':'somewhat'}, True),\n",
+    "    ({'cat_listen':'no', 'plays_croquet':'no', 'drinks_tea':'yes', 'size':'normal','how_late':'very'}, False),\n",
+    "    ({'cat_listen':'yes', 'plays_croquet':'no', 'drinks_tea':'yes', 'size':'normal','how_late':'not'}, False),\n",
+    "    ({'cat_listen':'yes', 'plays_croquet':'no', 'drinks_tea':'no', 'size':'small','how_late':'very'}, True),\n",
+    "    ({'cat_listen':'no', 'plays_croquet':'no', 'drinks_tea':'yes', 'size':'normal','how_late':'not'}, False),\n",
+    "    ({'cat_listen':'yes', 'plays_croquet':'yes', 'drinks_tea':'yes', 'size':'big','how_late':'somewhat'}, True),\n",
+    "    ({'cat_listen':'no', 'plays_croquet':'no', 'drinks_tea':'no', 'size':'normal','how_late':'very'}, True)\n",
+    "    \n",
+    "    \n",
+    "]\n",
+    "def partition_by(inputs,attribute):\n",
+    "    groups = collections.defaultdict(list)\n",
+    "    for input in inputs:\n",
+    "        key = input[0][attribute]\n",
+    "        groups[key].append(input)\n",
+    "    return groups\n",
+    "\n",
+    "def partition_entropy_by(inputs, attribute):\n",
+    "    partitions = partition_by(inputs,attribute)\n",
+    "    return partition_entropy(partitions.values())\n",
+    "\n",
+    "for key in ['cat_listen','plays_croquet','drinks_tea','size','how_late']:\n",
+    "    print (key, partition_entropy_by(inputs,key))\n",
+    "    print(\"\\n\")\n",
+    "\n",
+    "\n",
+    "    #tweets is 0.0 so we know we definitively split\n",
+    "    \n",
+    "#split by the lowest entropy: how late you are\n",
+    "    \n",
+    "very_inputs = [(input, label) for input, label in inputs if input[\"how_late\"]==\"somewhat\"]\n",
+    "\n",
+    "for key in ['cat_listen','plays_croquet','drinks_tea','size']:\n",
+    "    print (key, partition_entropy_by(very_inputs, key))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "## Who Stole the Tarts?\n",
     "\n",
     "Bayesian inference given Alice's evidence and the other evidence surrounding the charges"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
